--- a/style.css
+++ b/style.css
@@ -117,3 +117,46 @@ header {
                 padding: 10px;
                 margin-bottom: 10px;
                 }
+    
+    .benefits {
+        padding: 30px;
+
+        width: 100%;
+        max-width: 800px;
+        margin: auto;
+        }
+        .benefits h2 {
+            font-size: 1.5em;
+            padding-bottom: 5px;
+            border-bottom: 5px solid #F7965B;
+            margin-bottom: 30px;
+            }
+            .benefits h3 {
+                margin-bottom: 30px;
+                }
+        .benefits-blocks {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            }
+            .benefit-blk {
+                display: flex;
+                width: 50%;
+                max-width: 300px;
+
+                border-radius: 9px;
+                border: 3px solid gray;
+
+                margin-bottom: 10px;
+                }
+                .benefit-icon {
+                    padding: 3px;
+                    }
+                    .benefit-icon img {
+                        width: 100px;
+                        }
+                .benefit-blk_content {
+                    padding: 10px 10px 10px 0;
+                    font-size: 1.1em;
+                    }
