--- a/style.css
+++ b/style.css
@@ -8,13 +8,27 @@
 body {
     font-family: "Lato", sans-serif;
     }
+    
+    body > section {
+        padding: 30px;
+
+        width: 100%;
+        max-width: 800px;
+        margin: auto;
+        }
+        h2 {
+            font-size: 1.5em;
+            padding-bottom: 5px;
+            border-bottom: 5px solid #F7965B;
+            margin-bottom: 30px;
+            }
 
 header {
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    padding: 80px 0;
+    padding: 80px 0 0;
 
     background-color: #231F20;
     border: 5px solid white;
@@ -117,23 +131,10 @@ header {
                 padding: 10px;
                 margin-bottom: 10px;
                 }
-    
-    .benefits {
-        padding: 30px;
 
-        width: 100%;
-        max-width: 800px;
-        margin: auto;
-        }
-        .benefits h2 {
-            font-size: 1.5em;
-            padding-bottom: 5px;
-            border-bottom: 5px solid #F7965B;
+        .benefits h3 {
             margin-bottom: 30px;
             }
-            .benefits h3 {
-                margin-bottom: 30px;
-                }
         .benefits-blocks {
             display: flex;
             flex-direction: row;
@@ -144,6 +145,7 @@ header {
                 display: flex;
                 width: 50%;
                 max-width: 300px;
+                align-items: center;
 
                 border-radius: 9px;
                 border: 3px solid gray;
@@ -159,4 +161,21 @@ header {
                 .benefit-blk_content {
                     padding: 10px 10px 10px 0;
                     font-size: 1.1em;
+                    font-weight: 600;
+                    color: #292929;
+                    }
+
+        .brand-trust {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            }
+            .brand-trust_header {
+                width: 100%;
+                }
+            .brand-trust_icons {
+                width: 50%;
+                }
+                .brand-trust_icons img {
+                    width: 100%;
                     }
