--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@ body {
         h2 {
             font-size: 1.5em;
             padding-bottom: 5px;
-            border-bottom: 5px solid #F7965B;
             margin-bottom: 30px;
+            }
+        section > h2:not(.content-services h2) {
+            border-bottom: 5px solid #F7965B;
             }
 
 header {
@@ -129,7 +131,7 @@ header {
                 width: 45%;
                 text-align: center;
                 padding: 10px;
-                margin-bottom: 10px;
+                margin-bottom: 30px;
                 }
 
         .benefits h3 {
@@ -154,6 +156,7 @@ header {
                 }
                 .benefit-icon {
                     padding: 3px;
+                    opacity: .8;
                     }
                     .benefit-icon img {
                         width: 100px;
